--- a/2021COSPROJECT/2021COSPROJECT.csproj
+++ b/2021COSPROJECT/2021COSPROJECT.csproj
@@ -52,6 +52,12 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Form2.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Form2.Designer.cs">
+      <DependentUpon>Form2.cs</DependentUpon>
+    </Compile>
     <Compile Include="Missile.cs" />
     <Compile Include="Enemy.cs" />
     <Compile Include="Program.cs" />
@@ -88,6 +94,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\560-5602554_ruiner-enemies-cyberpunk-anime-cyberpunk-character-cyberpunk-enemies.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="bin\Debug\missile_small.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="bin\Debug\Character1.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
