--- a/2021COSPROJECT/2021COSPROJECT.csproj
+++ b/2021COSPROJECT/2021COSPROJECT.csproj
@@ -122,5 +122,11 @@
   <ItemGroup>
     <None Include="Resources\boof.gif" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\pixil-frame-0 %281%29.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\pixil-frame-0.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
